                                  _   _ ____  _     
                              ___| | | |  _ \| |    
                             / __| | | | |_) | |    
                            | (__| |_| |  _ <| |___ 
                             \___|\___/|_| \_\_____|

                                  Changelog


Daniel (19 September)
- Applied Markus Moeller's patch that introduces SPNEGO support if libcurl
  is built with the FBopenssl libraries. curl_version_info() now returns
  info on SPNEGO availability. The patch also made the GSSAPI stuff work fine
  with the MIT GSS-library (the Heimdal one still works too).

Daniel (16 September)
- Doing PUT with --digest failed, as reported in bug report #805853.

- Using --anyauth that picked NTLM, and then a redirect closed the connection
  and took curl to a second NTLM page made curl fail. Bug report #806328
  identified the problem, test case 90 was added to verify the fix.

Daniel (14 September)
- codemastr brought a patch for ares to make the Windows portions of it work
  properly on NT4. I uploaded a new diff and updated the docs on where to get
  it etc.

- Jeff Pohlmeyer tracked down a very hard-to-find bug where we removed a
  cached DNS entry even though it may be in use, which caused "random" memory
  to get overwritten and thus "random" crashes.

Daniel (12 September)
- Based on a bug report by David Kimdon, I made the runtests.pl script clear
  all possible proxy environment variables before the tests are run.

- By default, easy handles within a multi handle now share DNS cache.

- Tim Bartley brought a patch that makes the GSSNEGOTIATE option work for
  Microsoft's "Negotiate" authentication as well.

Daniel (11 September)
- A zero-length proxy string confused FTP transfers.

- Bjorn Reese found a case with an uninitialized pointer, only present when
  built for ares.

Version 7.10.8-pre1 (8 September 2003)

Daniel (7 September)
- Jurij Smakov found out that the non-OpenSSL MD5 code was not working on